[package]
name = "steering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1" }
bevy-inspector-egui = "0.18.3"
bevy_pancam = "0.8.0"
bevy_prototype_debug_lines = "0.10.1"
bevy_rapier2d = "0.21.0"
dojo-client = { git = "https://github.com/dojoengine/dojo", rev = "c2aa73ebb3f54c3dfe2fed923d1e5d2e65176c64"}
eyre = "0.6"
rand = "0.8.5"
starknet = "0.4.0"
bevy-tokio-tasks = "0.10"
url = "2.2.2"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
